<resources>
    <string name="app_name">Food Market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profile</string>
    <string name="icon_ok">ini adalah icon OK</string>
    <string name="image_screen">Image_Screen</string>
    <string name="foodmarket">FoodMarket</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="type_your_password">Type your password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_address">Email Address</string>
    <string name="your_email_address">Type your email address</string>
    <string name="password">Password</string>
    <string name="your_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_account">Create New Account</string>
    <string name="image_profile">image profile</string>
    <string name="full_name">Full Name</string>
    <string name="your_full_name">Type your full name</string>
    <string name="continue_create">Continue</string>
    <string name="number_phone">Phone No.</string>
    <string name="your_phone_number">Type your phone number</string>
    <string name="address">Address</string>
    <string name="your_address">Type your address</string>
    <string name="number_house">House No.</string>
    <string name="your_house_no">Type your house no</string>
    <string name="city">City</string>
    <string name="type_your_city">Type your city</string>
    <string name="sign_up_now">Sign Up Now</string>
</resources>