<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:layout_marginTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".ui.auth.signin.SignInFragment">

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="@string/your_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/shape_rectangle_outline_8_020202"
        android:hint="@string/your_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnSignin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSignup"
        android:text="@string/new_account"
        android:textAllCaps="false"
        android:layout_marginTop="12dp"
        style="@style/Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>