<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpAddressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="@dimen/_24sdp"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingTop="@dimen/_26sdp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_phone" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_marginTop="@dimen/_6sdp"
            android:padding="10dp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_marginTop="@dimen/_6sdp"
            android:padding="@dimen/_10sdp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_house" />

        <EditText
            android:id="@+id/etHouseNumber"
            android:padding="@dimen/_10sdp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_house_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:id="@+id/etCity"
            android:padding="@dimen/_10sdp"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/type_your_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSignUpNow"
            android:text="@string/sign_up_now"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_24sdp"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>