<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"
        android:layout_marginTop="24dp"
        android:paddingLeft="@dimen/_24sdp"
        android:paddingRight="@dimen/_24sdp"
        android:paddingTop="@dimen/_26sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProfil"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_110sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_profile"
            android:src="@drawable/ic_picture_empty"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/etFullname"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/_48sdp"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_48sdp"
            android:padding="@dimen/_10sdp" />

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            style="@style/TextView.PoppinsNormal16sp020202"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditText.PoppinsNormal14sp8D92A3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rectangle_outline_8_020202"
            android:hint="@string/your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="@dimen/_48sdp"
            android:padding="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnContinue"
            android:text="@string/continue_create"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_24sdp"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>